--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <footer class="card-footer">
                 <a href="https://www.google.com/maps/search/?api=1&query=荃灣柴灣角街73號金岸科技中心505室" target="_blank" class="map-link">
                     <span class="map-label"><span class="lang-zh">地圖</span><span class="lang-en">MAP</span></span>
-                    <span class="map-address"><span class="lang-zh">金岸科技中心505室</span><span class="lang-en">Golden Bear Ind. Centre, 505</span></span>
+                    <span class="map-address"><span class="lang-zh">金岸科技中心505室</span><span class="lang-en">Rm 505, Cameron Sino Technology Centre</span></span>
                     <i class="fas fa-arrow-right"></i>
                 </a>
                 <p class="copyright">© <span id="currentYear"></span> Foresys Co., Ltd.</p>
