--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
                     <img src="photo/foresys.png" alt="Foresys Logo" class="logo">
                 </div>
                 <div class="company-info-header">
-                    <span class="header-tag">
-                        <span class="lang-zh">組織</span><span class="lang-en">ORGANIZATION</span>
-                    </span>
                     <h1>
                         <span class="lang-zh">科先系統有限公司</span>
                         <span class="lang-en">Foresys Co., Ltd.</span>
@@ -178,12 +175,7 @@
             <footer class="card-footer">
 <!-- ... footer 的內容保持不變 ... -->
             <footer class="card-footer">
-                <a href="https://www.google.com/maps/search/?api=1&query=荃灣柴灣角街73號金岸科技中心505室" target="_blank" class="map-link">
-                    <span class="map-label"><span class="lang-zh">地圖</span><span class="lang-en">MAP</span></span>
-                    <span class="map-address"><span class="lang-zh">金岸科技中心505室</span><span class="lang-en">Rm 505, Cameron Sino Technology Centre</span></span>
-                    <i class="fas fa-arrow-right"></i>
-                </a>
-                <p class="copyright">© <span id="currentYear"></span> Foresys Co., Ltd.</p>
+                <p>copyright © <span id="currentYear"></span> Fore Systems Limited.</p>
             </footer>
         </div>
     </div>
