--- a/Backup/index.html
+++ b/Backup/index.html
@@ -23,7 +23,7 @@
                 <div class="company-info-header">
                     <h1>
                         <span class="lang-zh">科先系統有限公司</span>
-                        <span class="lang-en">Fore Systems Limited</span>
+                        <span class="lang-en">Foresys Co., Ltd.</span>
                     </h1>
                     <a href="http://www.foresys.com.hk" target="_blank" class="website-link">
                         <i class="fas fa-link"></i> www.foresys.com.hk
@@ -104,12 +104,7 @@
                         </div>
 
                         <!-- Correct Placement for NEW Action Buttons -->
-
                         <div class="actions-group">
-                            <button id="showStaticWebsiteQR" class="action-btn">
-                                <i class="fas fa-qrcode"></i>
-                                <span class="lang-zh">顯示網站QR碼</span><span class="lang-en">Show Website QR</span>
-                            </button>                             
                             <a id="addToFavoritesBtn" href="#" class="action-btn">
                                 <i class="fas fa-star"></i>
                                 <span><span class="lang-zh">加入我的最愛</span><span class="lang-en">Add to Favorites</span></span>
@@ -180,7 +175,7 @@
             <footer class="card-footer">
 <!-- ... footer 的內容保持不變 ... -->
             <footer class="card-footer">
-                <p>copyright © <span id="currentYear"></span> Fore Systems Limited</p>
+                <p>copyright © <span id="currentYear"></span> Fore Systems Limited.</p>
             </footer>
         </div>
     </div>
@@ -190,7 +185,7 @@
         <div class="modal-content">
             <span class="close-modal-btn">×</span>
             <p id="qrModalTitle"></p>
-            <div id="qrcodeDisplayArea"></div>
+            <div id="qrcodeCanvas"></div>
         </div>
     </div>
 
