--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
                                 </div>
                                 <button class="copy-btn"><i class="far fa-copy"></i></button>
                             </div>
+                    <!-- WHATSAPP Item (讓整行可點擊) -->
+                            <!-- WHATSAPP Item -->
+                            <div class="contact-item" data-tooltip-en="Chat on WhatsApp / Copy Number" data-tooltip-zh="WhatsApp 對話 / 複製號碼">
+                                <i class="fab fa-whatsapp icon-contact whatsapp-icon"></i>
+                                <a href="https://wa.me/85253992969" target="_blank" class="contact-content whatsapp-clickable-area">
+                                    <span class="contact-label">WhatsApp</span> <!-- Kept WhatsApp label consistent -->
+                                    <span class="contact-value whatsapp-number copy-target-text" data-raw-number="85253992969">+852 5399 2969</span>
+                                </a>
+                                <button class="copy-btn" aria-label="Copy"><i class="far fa-copy"></i></button>
+                            </div>      
                             <div class="contact-item">
                                 <i class="fas fa-phone icon-contact"></i>
                                 <div class="contact-info">
@@ -129,8 +139,8 @@
                     <div id="tab-about-me" class="tab-panel">
                         <div class="prose-content">
                             <p>
-                                <span class="lang-zh">SHAWN 是一位沉穩可靠的工作伙伴, 其精通香港會計準則及資訊科技知識, 相信定能為顧客提供高質素的支援。</span>
-                                <span class="lang-en">SHAWN is a calm and reliable working partner, proficient in Hong Kong accounting standards and technological knowledge. He is confident in providing high-quality support to customers.</span>
+                                <span class="lang-zh">Shawn 是一位沉穩可靠的工作伙伴, 其精通香港會計準則及資訊科技知識, 相信定能為顧客提供高質素的支援。</span>
+                                <span class="lang-en">Shawn is a calm and reliable working partner, proficient in Hong Kong accounting standards and technological knowledge. He is confident in providing high-quality support to customers.</span>
                             </p>
                             <h4><span class="lang-zh">興趣</span><span class="lang-en">INTERESTS</span></h4>
                             <ul>
